BCF 2.2 writing WIP